--- a/JavaScript DOM 编程艺术/动画/list.html
+++ b/JavaScript DOM 编程艺术/动画/list.html
@@ -13,9 +13,9 @@
 			<li><a href="presentation.html">Presentation</a></li>
 			<li><a href="behavior.html">Behavior</a></li>
 		</ol>
-		<div id="slideshow">
+		<!--<div id="slideshow">
 			<img src="img/topics.gif" alt="building blocks of web design" id="preview" />
-		</div>
+		</div>-->
 		<script type="text/javascript" src="js/list.js" ></script>
 	</body>
 </html>
