--- a/JavaScript DOM 编程艺术/乐队网站/contact.html
+++ b/JavaScript DOM 编程艺术/乐队网站/contact.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>Contact</title>
+		<script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
+		<link type="text/css" rel="stylesheet" href="css/basic.css" media="screen" />
 	</head>
 	<body>
+		<header>
+			<img src="img/logo.gif" alt="logo" />
+			<nav>
+				<ul>
+					<li><a href="index.html" >Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="photos.html">Photos</a></li>
+					<li><a href="live.html">Live</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
+  		<article>
+			<h1>Contact the band</h1>
+			<form method="post" action="submit.html">
+			  	<fieldset>
+			    	<p>
+			     		<label for="name">Name:</label>
+			     		<input type="text" id="name" name="name" placeholder="Your name" required="required" />
+			    	</p>
+			    	<p>
+				     	<label for="email">Email:</label>
+				     	<input type="email" id="email" name="email" placeholder="Your email address" required="required" />
+			    	</p>
+			    	<p>
+			     		<label for="message">Message:</label>
+			     		<textarea cols="45" rows="7" id="message" name="message" required="required" placeholder="Write your message here."></textarea>
+			    	</p>
+			    	<input type="submit" value="Send" />
+			   	</fieldset>
+			</form>
+		</article>
+ 		<script src="js/global.js" type="text/javascript"></script>
 	</body>
 </html>
