--- a/锋利的jQuery/test2/index.html
+++ b/锋利的jQuery/test2/index.html
@@ -2,9 +2,41 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>输入框提示</title>
+		<script src="js/jquery-3.1.0.min.js" type="text/javascript"></script>
 	</head>
 	<body>
-		
+		<label for="address">邮箱</label><input type="text" id="address" value="请输入邮箱地址" /><br  />
+		<label for="password">密码</label><input type="text" id="password" value="请输入邮箱密码" /><br  />
+		<input type="button" value="登录" />
+		<script type="text/javascript">
+			$(function(){
+				$("#address").focus(function(){
+					var txt_value=$(this).val();//获取地址文本框的值
+					if(txt_value=="请输入邮箱地址"){
+						$(this).val("");
+					}
+				});
+				$("#address").blur(function(){//文本框失去焦点
+					var txt_value=$(this).val();
+					if(txt_value==""){
+						$(this).val("请输入邮箱地址")
+					}
+				});
+				//密码框
+				$("#password").focus(function(){
+					var txt_value=$(this).val();//获取密码文本框的值
+					if(txt_value=="请输入邮箱密码"){
+						$(this).val("");
+					}
+				});
+				$("#password").blur(function(){//文本框失去焦点
+					var txt_value=$(this).val();
+					if(txt_value==""){
+						$(this).val("请输入邮箱密码")
+					}
+				});
+			});
+		</script>
 	</body>
 </html>
